[package]
name = "solottery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {path = "core/lib"}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
mysql = "*"
chrono = {version = "0.4", features = ["serde"]}
libc = "*"
# mysql_common = { version = "0.28.2", features = ["chrono"] }

[dependencies.rocket_contrib]
path = "contrib/lib"
default-features = false
features = ["json"]

[dependencies.mysql_common]
features = ["chrono"]
